--- a/webpage.html
+++ b/webpage.html
@@ -157,7 +157,7 @@
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
     const firebaseConfig = {
-      //apiKey: "AIzaSyAoLKK-3sx16nk85eMYeuPHZNJO3pBJM08",
+      //apiKey: ,
       authDomain: "bike-anti-theft-be6a1.firebaseapp.com",
       databaseURL: "https://bike-anti-theft-be6a1-default-rtdb.firebaseio.com",
       projectId: "bike-anti-theft-be6a1",
